test/cases/compile_errors/callconv_inline.zig
inline fn entry() callconv(.c) void {}

// error
//
// :1:29: error: explicit callconv incompatible with inline keyword
